fixing bg on mobile

--- a/index.css
+++ b/index.css
@@ -24,12 +24,23 @@ html {
   font-size: 17px;
   scroll-behavior: smooth;
 }
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("./otherLogoAndImg/backgroundImage.jpg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 body {
-  background-image: url("./otherLogoAndImg/backgroundImage.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   height: 100%;
   scroll-behavior: smooth;
 }
@@ -796,11 +807,14 @@ section {
     font-size: 16px;
   }
 
-  body {
+ /*  body {
        background-image: url("./otherLogoAndImg/mobilebg.jpg");
-    /* background-attachment: scroll;
-    background-repeat: repeat; */
-  }
+    background-attachment: scroll;
+    background-repeat: repeat;
+    background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  } */
 
   div.section {
     width: 97.5%;
